Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-51927

[REG:5.6.0-alpha1->5.6.0] adding items to GridLayout with default property alias causes a crash during destruction

XMLWordPrintable

    • 59c6c0e0b1b5b46747595a58e11311b7393d7e70 5149aa68eca6ede8836ec4f07a14d22d9da9b161 b17337da34a76f9512a826b19dcd45b337295c3b

      Adding items to GridLayout through default property alias causes a crash when destroying the item.

      To reproduce:

      • use Qt 5.6.0 MSVC2013 or MSVC2015 64bit build on Windows 10
      • start attached application
      • close the window

      I could not reproduce this with MinGW on Windows 7 or 10 and also does not seem to be reproducible on Linux.

        1. qtbug51927.zip
          1 kB
        2. qtbug51927_stack.txt
          12 kB
        3. qtbug51927_valgrind.txt
          81 kB
        4. qtbug51927_2.zip
          2 kB
        5. QQuickItemCrash.zip
          2 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mitch_curtis Mitch Curtis
            poikelin Joni Poikelin
            Votes:
            3 Vote for this issue
            Watchers:
            13 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes