Fix crash on exit when using default property aliases with layouts

The layout was being destroyed before the text, which meant that the
removeItemChangeListener() call never got hit. To ensure that the
listener is always removed, loop through each child in QQuickLayout's
destructor.

Task-number: QTBUG-51927
Change-Id: I4235579501bd1790e9483a8741915e55f1b1b803
Reviewed-by: Frederik Gladhorn <frederik.gladhorn@qt.io>
Reviewed-by: J-P Nurmi <jpnurmi@qt.io>